src/moab/iMOAB.h

/**
 * \brief Store the specified values in a MOAB integer Tag.
 * 
 * Values are set on vertices or elements, depending on entity_type
 * 
 * \note we could change the api to accept as input the tag index, as returned by iMOAB_DefineTagStorage.
 * 
 * <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                       The unique pointer to the application ID.
 * \param[in]  tag_storage_name (iMOAB_String)         The tag name to store/retreive the data in MOAB.
 * \param[in]  num_tag_storage_length (int*)           The size of tag storage data (e.g., num_visible_vertices*components_per_entity or 
 *                                                     num_visible_elements*components_per_entity).
 * \param[in]  entity_type (int*)                      Type=0 for vertices, and Type=1 for primary elements.
 * \param[out] tag_storage_data (int*)                 The array data of type <I>int</I> to replace the internal tag memory; 
 *                                                     The data is assumed to be contiguous over the local set of visible entities 
 *                                                     (either vertices or elements).
 * \return ErrCode                                     The error code indicating success or failure.
 */
ErrCode iMOAB_SetIntTagStorage( iMOAB_AppID pid,
                                const iMOAB_String tag_storage_name,
                                int* num_tag_storage_length,
                                int* entity_type,
                                int* tag_storage_data );
/**
 * \brief Get the specified values in a MOAB integer Tag.
 * 
 * \note <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                       The unique pointer to the application ID.
 * \param[in]  tag_storage_name (iMOAB_String)         The tag name to store/retreive the data in MOAB.
 * \param[in]  num_tag_storage_length (int*)           The size of tag storage data (e.g., num_visible_vertices*components_per_entity or 
 *                                                     num_visible_elements*components_per_entity).
 * \param[in]  entity_type (int*)                      Type=0 for vertices, and Type=1 for primary elements.
 * \param[out] tag_storage_data (int*)                 The array data of type <I>int</I> to be copied from the internal tag memory; 
 *                                                     The data is assumed to be contiguous over the local set of visible 
 *                                                     entities (either vertices or elements).
 * \return ErrCode                                     The error code indicating success or failure.
 */
ErrCode iMOAB_GetIntTagStorage( iMOAB_AppID pid,
                                const iMOAB_String tag_storage_name,
                                int* num_tag_storage_length,
                                int* entity_type,
                                int* tag_storage_data );
/**
 * \brief Store the specified values in a MOAB double Tag.
 * 
 * \note <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                       The unique pointer to the application ID.
 * \param[in]  tag_storage_name (iMOAB_String)         The tag name to store/retreive the data in MOAB.
 * \param[in]  num_tag_storage_length (int*)           The size of tag storage data (e.g., num_visible_vertices*components_per_entity 
 *                                                     or num_visible_elements*components_per_entity).
 * \param[in]  entity_type (int*)                      Type=0 for vertices, and Type=1 for primary elements.
 * \param[out] tag_storage_data (double*)              The array data of type <I>double</I> to replace the internal tag memory; 
 *                                                     The data is assumed to be contiguous over the local set of visible 
 *                                                     entities (either vertices or elements).
 * \return ErrCode                                     The error code indicating success or failure.
 */
ErrCode iMOAB_SetDoubleTagStorage( iMOAB_AppID pid,
                                   const iMOAB_String tag_storage_name,
                                   int* num_tag_storage_length,
                                   int* entity_type,
                                   double* tag_storage_data );
/**
 * \brief Retrieve the specified values in a MOAB double Tag.
 * 
 * \note <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                       The unique pointer to the application ID.
 * \param[in]  tag_storage_name (iMOAB_String)         The tag name to store/retreive the data in MOAB.
 * \param[in]  num_tag_storage_length (int)            The size of tag storage data (e.g., num_visible_vertices*components_per_entity 
 *                                                     or num_visible_elements*components_per_entity)
 * \param[in]  entity_type (int*)                      Type=0 for vertices, and Type=1 for primary elements.
 * \param[out] tag_storage_data (double*)              The array data of type <I>double</I> to replace the internal tag memory; 
 *                                                     The data is assumed to be contiguous over the local set of visible 
 *                                                     entities (either vertices or elements).
 * \return ErrCode                                     The error code indicating success or failure.
 */
ErrCode iMOAB_GetDoubleTagStorage( iMOAB_AppID pid,
                                   const iMOAB_String tag_storage_name,
                                   int* num_tag_storage_length,
                                   int* entity_type,
                                   double* tag_storage_data );
/**
 * \brief Exchange tag values for the given tags across process boundaries.
 * 
 * \note <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                The unique pointer to the application ID.
 * \param[in]  num_tags (int*)                  Number of tags to exchange.
 * \param[in]  tag_indices (int*)               Array with tag indices of interest (size  = *num_tags).
 * \param[in]  ent_type (int*)                  The type of entity for tag exchange.
 * \return ErrCode                              The error code indicating success or failure.
 */
ErrCode iMOAB_SynchronizeTags( iMOAB_AppID pid, int* num_tag, int* tag_indices, int* ent_type );
/**
 * \brief Perform global reductions with the processes in the current applications communicator. 
 * Specifically this routine performs reductions on the maximum value of the tag indicated by \ref tag_index.
 * 
 * \note <B>Operations:</B> Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                The unique pointer to the application ID.
 * \param[in]  tag_index   (int*)               The tag index of interest.
 * \param[in]  ent_type (int*)                  The type of entity for tag reduction operation
 *                                              (vertices = 0, elements = 1)
 * \return ErrCode                              The error code indicating success or failure.
 */
ErrCode iMOAB_ReduceTagsMax( iMOAB_AppID pid, int* tag_index, int* ent_type );
/**
 * \brief Retrieve the adjacencies for the element entities.
 * 
 * \note <B>Operations:</B> Not Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                      The unique pointer to the application ID.
 * \param[in]  local_index (iMOAB_LocalID*)           The local element ID for which adjacency information is needed.
 * \param[out] num_adjacent_elements (int*)           The total number of adjacent elements.
 * \param[out] adjacent_element_IDs (iMOAB_LocalID*)  The local element IDs of all adjacent elements to the current one
 *                                                    (typically, num_total_sides for internal elements or 
 *                                                    num_total_sides-num_sides_on_boundary for boundary elements).
 * \return ErrCode                              The error code indicating success or failure.
 */
ErrCode iMOAB_GetNeighborElements( iMOAB_AppID pid,
                                   iMOAB_LocalID* local_index,
                                   int* num_adjacent_elements,
                                   iMOAB_LocalID* adjacent_element_IDs );
/**
 * \brief Get the adjacencies for the vertex entities.
 * 
 * \todo The implementation may not be fully complete 
 * 
 * \note <B>Operations:</B> Not Collective
 * 
 * \param[in]  pid (iMOAB_AppID)                      The unique pointer to the application ID.
 * \param[in]  local_vertex_ID (iMOAB_LocalID*)       The local vertex ID for which adjacency information is needed.
 * \param[out] num_adjacent_vertices (int*)           The total number of adjacent vertices.
 * \param[out] adjacent_vertex_IDs (iMOAB_LocalID*)   The local element IDs of all adjacent vertices to the current one
 *                                                    (typically, num_total_sides for internal elements or 
 *                                                    num_total_sides-num_sides_on_boundary for boundary elements).
 * \return ErrCode                                    The error code indicating success or failure.
 */
ErrCode iMOAB_GetNeighborVertices( iMOAB_AppID pid,
                                   iMOAB_LocalID* local_vertex_ID,
                                   int* num_adjacent_vertices,
                                   iMOAB_LocalID* adjacent_vertex_IDs );
/**
 * \brief Set global information for number of vertices and number of elements;
 * It is usually available from the h5m file, or it can be computed with a MPI_Reduce.
 * 
 * \param[in]  pid (iMOAB_AppID)               The unique pointer to the application ID.
 * \param[in]  num_global_verts (int*)         The number of total vertices in the mesh.
 * \param[in]  num_global_elems (MPI_Comm)     The number of total elements in the mesh.
 * \return ErrCode                             The error code indicating success or failure.
 */
ErrCode iMOAB_SetGlobalInfo( iMOAB_AppID pid, int* num_global_verts, int* num_global_elems );
/**
 * \brief Get global information about number of vertices and number of elements.
 * 
 * \param[in]  pid (iMOAB_AppID)             The unique pointer to the application ID.
 * \param[in]  num_global_verts (int*)       The number of total vertices in the mesh.
 * \param[in]  num_global_elems (MPI_Comm)   The number of total elements in the mesh.
 * \return ErrCode                           The error code indicating success or failure.
 */
ErrCode iMOAB_GetGlobalInfo( iMOAB_AppID pid, int* num_global_verts, int* num_global_elems );