src/iMOABF.F90


  integer(c_int) function iMOAB_SetIntTagStorage(pid, tag_storage_name, num_tag_storage_length, entity_type, tag_storage_data, tag_storage_name_length) bind(C, name='iMOAB_SetIntTagStorage')
    use, intrinsic :: iso_c_binding, only : c_int, c_char
    integer(c_int), intent(in) :: pid
    character(kind=c_char), intent(in) :: tag_storage_name(*)
    integer(c_int), intent(in) :: num_tag_storage_length
    integer(c_int), intent(in) :: entity_type
    integer(c_int), intent(in) :: tag_storage_data
    integer(c_int), value, intent(in) :: tag_storage_name_length
  end function iMOAB_SetIntTagStorage

  integer(c_int) function iMOAB_GetIntTagStorage(pid, tag_storage_name, num_tag_storage_length, entity_type, tag_storage_data, tag_storage_name_length) bind(C, name='iMOAB_GetIntTagStorage')
    use, intrinsic :: iso_c_binding, only : c_int, c_char
    integer(c_int), intent(in) :: pid
    character(kind=c_char), intent(in) :: tag_storage_name(*)
    integer(c_int), intent(in) :: num_tag_storage_length
    integer(c_int), intent(in) :: entity_type
    integer(c_int), intent(out) :: tag_storage_data
    integer(c_int), value, intent(in) :: tag_storage_name_length
  end function iMOAB_GetIntTagStorage

  integer(c_int) function iMOAB_SetDoubleTagStorage(pid, tag_storage_name, num_tag_storage_length, entity_type, tag_storage_data, tag_storage_name_length) bind(C, name='iMOAB_SetDoubleTagStorage')
    use, intrinsic :: iso_c_binding, only : c_int, c_char, c_double
    integer(c_int), intent(in) :: pid
    character(kind=c_char), intent(in) :: tag_storage_name(*)
    integer(c_int), intent(in) :: num_tag_storage_length
    integer(c_int), intent(in) :: entity_type
    real(c_double), intent(in) :: tag_storage_data
    integer(c_int), value, intent(in) :: tag_storage_name_length
  end function iMOAB_SetDoubleTagStorage

  integer(c_int) function iMOAB_GetDoubleTagStorage(pid, tag_storage_name, num_tag_storage_length, entity_type, tag_storage_data, tag_storage_name_length) bind(C, name='iMOAB_GetDoubleTagStorage')
    use, intrinsic :: iso_c_binding, only : c_int, c_char, c_double
    integer(c_int), intent(in) :: pid
    character(kind=c_char), intent(in) :: tag_storage_name(*)
    integer(c_int), intent(in) :: num_tag_storage_length
    integer(c_int), intent(in) :: entity_type
    real(c_double), intent(out) :: tag_storage_data
    integer(c_int), value, intent(in) :: tag_storage_name_length
  end function iMOAB_GetDoubleTagStorage

  integer(c_int) function iMOAB_SynchronizeTags(pid, num_tag, tag_indices, entity_type) bind(C, name='iMOAB_SynchronizeTags')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(in) :: num_tag
    integer(c_int), intent(in) :: tag_indices
    integer(c_int), intent(in) :: entity_type
  end function iMOAB_SynchronizeTags

  integer(c_int) function iMOAB_ReduceTagsMax(pid, tag_index, entity_type) bind(C, name='iMOAB_ReduceTagsMax')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(in) :: tag_index
    integer(c_int), intent(in) :: entity_type
  end function iMOAB_ReduceTagsMax

  integer(c_int) function iMOAB_GetNeighborElements(pid, local_index, num_adjacent_elements, adjacent_element_IDs) bind(C, name='iMOAB_GetNeighborElements')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(in) :: local_index
    integer(c_int), intent(out) :: num_adjacent_elements
    integer(c_int), intent(out) :: adjacent_element_IDs
  end function iMOAB_GetNeighborElements

  integer(c_int) function iMOAB_GetNeighborVertices(pid, local_index, num_adjacent_vertices, adjacent_vertex_IDs) bind(C, name='iMOAB_GetNeighborVertices')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(in) :: local_index
    integer(c_int), intent(out) :: num_adjacent_vertices
    integer(c_int), intent(out) :: adjacent_vertex_IDs
  end function iMOAB_GetNeighborVertices

  integer(c_int) function iMOAB_SetGlobalInfo(pid, num_global_verts, num_global_elems) bind(C, name='iMOAB_SetGlobalInfo')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(in) :: num_global_verts
    integer(c_int), intent(in) :: num_global_elems
  end function iMOAB_SetGlobalInfo

  integer(c_int) function iMOAB_GetGlobalInfo(pid, num_global_verts, num_global_elems) bind(C, name='iMOAB_GetGlobalInfo')
    use, intrinsic :: iso_c_binding, only : c_int, c_double
    integer(c_int), intent(in) :: pid
    integer(c_int), intent(out) :: num_global_verts
    integer(c_int), intent(out) :: num_global_elems
  end function iMOAB_GetGlobalInfo


end interface

end module iMOAB